# curve-dao-operations

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  ape-config.yaml  hardhat.config.js  package-lock.json  pylintrc  pyproject.toml  requirements-complete.txt  requirements.in  requirements.txt  vote.yaml
.github/workflows/: main.yaml
ape/: .pre-commit-config.yaml  LICENSE  README.md  requirements-complete.txt  requirements.txt
ape/contracts/: VotingEscrow.json
ape/contracts/aragon_interfaces/: Voting.json
ape/curve_dao/: ipfs.py
ape/scripts/: set_vote.py
ape/tests/: test_decode_vote.py
contracts/: VotingEscrow.json
contracts/aragon_interfaces/: Agent.json  Voting.json
curve_dao/: __init__.py  addresses.py  compile_vote.py  decoder_utils.py  ipfs.py  simulate.py  vote_utils.py
curve_dao/modules/: gauge.py  gauge_controller.py  gauge_utils.py  smartwallet_checker.py  stableswap_params.py
scripts/: create_vote.py  decode_executable.py  execute_vote.py  set_vote.py  smartwallet_checker.py  vote_utils.py
scripts/dao_utils/: __init__.py  create_vote.py  simulate.py  stakeholders.py  vote_utils.py
scripts/utils/: __init__.py  constants.py  decoder_utils.py  simulate.py  vote_utils.py
tests/: conftest.py  test_decode_vote.py  test_execute_vote.py  test_kill_gauge.py  test_parameter.py  test_vote_data.py  test_whitelist.py
tests/fixtures/: core.py
